@@ -2,22 +2,21 @@
 package net.mehvahdjukaar.dummmmmmy.entity;
 
 import net.mehvahdjukaar.dummmmmmy.setup.Registry;
-import net.minecraft.block.BlockState;
-import net.minecraft.entity.Entity;
-import net.minecraft.entity.EntityType;
-import net.minecraft.entity.MobEntity;
-import net.minecraft.entity.ai.attributes.AttributeModifierMap;
-import net.minecraft.entity.ai.attributes.Attributes;
-import net.minecraft.nbt.CompoundNBT;
-import net.minecraft.network.IPacket;
-import net.minecraft.network.PacketBuffer;
-import net.minecraft.util.DamageSource;
-import net.minecraft.util.math.AxisAlignedBB;
-import net.minecraft.util.math.BlockPos;
-import net.minecraft.world.World;
-import net.minecraftforge.fml.common.registry.IEntityAdditionalSpawnData;
-import net.minecraftforge.fml.network.FMLPlayMessages;
-import net.minecraftforge.fml.network.NetworkHooks;
+import net.minecraft.world.level.block.state.BlockState;
+import net.minecraft.world.entity.Entity;
+import net.minecraft.world.entity.EntityType;
+import net.minecraft.world.entity.Mob;
+import net.minecraft.world.entity.ai.attributes.AttributeSupplier;
+import net.minecraft.world.entity.ai.attributes.Attributes;
+import net.minecraft.nbt.CompoundTag;
+import net.minecraft.network.protocol.Packet;
+import net.minecraft.network.FriendlyByteBuf;
+import net.minecraft.world.damagesource.DamageSource;
+import net.minecraft.core.BlockPos;
+import net.minecraft.world.level.Level;
+import net.minecraftforge.fmllegacy.common.registry.IEntityAdditionalSpawnData;
+import net.minecraftforge.fmllegacy.network.FMLPlayMessages;
+import net.minecraftforge.fmllegacy.network.NetworkHooks;
 
 import java.util.ArrayList;
 import java.util.Arrays;
@@ -26,31 +25,31 @@ import java.util.Random;
 
 
 public class DummyNumberEntity extends Entity implements IEntityAdditionalSpawnData {
-    protected static final int MAXAGE = 40;
+    protected static final int MAX_AGE = 40;
     public int age;
-    public float number = 69420;
+    private float number = 69420;
     protected float speed = 1;
     public float dy = 0;
     public float prevDy = 0;
     public TargetDummyEntity.DamageType color = TargetDummyEntity.DamageType.GENERIC;
     public float dx = 0;
     public float prevDx = 0;
-    public float speedx = 0;
+    private float speedX = 0;
     public float fadeout = -1;
     public float prevFadeout = -1;
     private int type = -1; //used for location in array
     protected final Random rand = new Random();
-    public List<Float> list = new ArrayList<>(Arrays.asList(0f, -0.25f, 0.12f, -0.12f, 0.25f));
+    private final List<Float> list = List.of(0f, -0.25f, 0.12f, -0.12f, 0.25f);
 
-    public DummyNumberEntity(FMLPlayMessages.SpawnEntity packet, World world) {
+    public DummyNumberEntity(FMLPlayMessages.SpawnEntity packet, Level world) {
         this(Registry.DUMMY_NUMBER.get(), world);
     }
 
-    public DummyNumberEntity(EntityType<DummyNumberEntity> type, World world) {
+    public DummyNumberEntity(EntityType<DummyNumberEntity> type, Level world) {
         super(type, world);
     }
 
-    public DummyNumberEntity(float number, TargetDummyEntity.DamageType color, int type, World world) {
+    public DummyNumberEntity(float number, TargetDummyEntity.DamageType color, int type, Level world) {
         this(Registry.DUMMY_NUMBER.get(), world);
         this.number = number;
         this.color = color;
@@ -58,44 +57,39 @@ public class DummyNumberEntity extends Entity implements IEntityAdditionalSpawnD
     }
 
     //have to give him some attributes or server will throw errors
-    public static AttributeModifierMap.MutableAttribute setCustomAttributes() {
-        return MobEntity.createMobAttributes()
+    public static AttributeSupplier.Builder setCustomAttributes() {
+        return Mob.createMobAttributes()
                 .add(Attributes.MAX_HEALTH, 20D);
     }
 
     @Override
-    public AxisAlignedBB getBoundingBox() {
-        return new AxisAlignedBB(new BlockPos(this.getX(), this.getY(), this.getZ()));
-    }
-
-    @Override
-    public void writeSpawnData(PacketBuffer buffer) {
+    public void writeSpawnData(FriendlyByteBuf buffer) {
         buffer.writeFloat(this.number);
         buffer.writeEnum(this.color);
         buffer.writeInt(this.type);
     }
 
     @Override
-    public void readSpawnData(PacketBuffer additionalData) {
+    public void readSpawnData(FriendlyByteBuf additionalData) {
         this.number = additionalData.readFloat();
         this.color = additionalData.readEnum(TargetDummyEntity.DamageType.class);
         int i = additionalData.readInt();
         if (i != -1) {
-            this.speedx = list.get(i % list.size());
+            this.speedX = list.get(i % list.size());
         } else {
             //this.speedx = (this.rand.nextFloat() - 0.5f) / 2f;
-            this.speedx = list.get(this.rand.nextInt(list.size()));
+            this.speedX = list.get(this.rand.nextInt(list.size()));
         }
     }
 
-    public void readAdditionalSaveData(CompoundNBT compound) {
+    public void readAdditionalSaveData(CompoundTag compound) {
         // super.readAdditional(compound);
         this.number = compound.getFloat("Number");
         this.color = TargetDummyEntity.DamageType.values()[compound.getInt("Type")];
         this.age = compound.getInt("Age");
     }
 
-    public void addAdditionalSaveData(CompoundNBT compound) {
+    public void addAdditionalSaveData(CompoundTag compound) {
         // super.writeAdditional(compound);
         compound.putFloat("Number", this.number);
         compound.putInt("Type", this.color.ordinal());
@@ -107,19 +101,19 @@ public class DummyNumberEntity extends Entity implements IEntityAdditionalSpawnD
     }
 
     @Override
-    public IPacket<?> getAddEntityPacket() {
+    public Packet<?> getAddEntityPacket() {
         return NetworkHooks.getEntitySpawningPacket(this);
     }
 
     @Override
     public void tick() {
-        if (this.age++ > MAXAGE || this.getY() < -64.0D) {
-            this.remove();
+        if (this.age++ > MAX_AGE || this.getY() < -64.0D) {
+            this.remove(RemovalReason.DISCARDED);
         }
         if (this.level.isClientSide) {
-            float lenght = 6;
+            float length = 6;
             this.prevFadeout = this.fadeout;
-            this.fadeout = this.age > (MAXAGE - lenght) ? ((float) MAXAGE - this.age) / lenght : 1;
+            this.fadeout = this.age > (MAX_AGE - length) ? ((float) MAX_AGE - this.age) / length : 1;
 
 
             // this.forceSetPosition(this.getPosX(), this.getPosY() + (this.speed / 2),
@@ -127,7 +121,7 @@ public class DummyNumberEntity extends Entity implements IEntityAdditionalSpawnD
             this.prevDy = this.dy;
             this.dy += this.speed;
             this.prevDx = this.dx;
-            this.dx += this.speedx;
+            this.dx += this.speedX;
             // this.speed / 500d;
             //spawn numbers in a sort of elliple centered on his torso
             if (Math.sqrt(Math.pow(this.dx * 1.5, 2) + Math.pow(this.dy - 1, 2)) < 1.9 - 1) {
@@ -135,7 +129,7 @@ public class DummyNumberEntity extends Entity implements IEntityAdditionalSpawnD
                 speed = speed / 2;
             } else {
                 speed = 0;
-                speedx = 0;
+                speedX = 0;
             }
         }
     }
@@ -145,7 +139,7 @@ public class DummyNumberEntity extends Entity implements IEntityAdditionalSpawnD
     }
 
     @Override
-    public boolean causeFallDamage(float l, float d) {
+    public boolean causeFallDamage(float p_146828_, float p_146829_, DamageSource p_146830_) {
         return false;
     }
 
